[package]
name = "linuxkit-utils"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "^0.6"
serde = {version = "^1", features = ["derive"]}
serde_yaml = "^0.8"
envsubst = "^0.2"
structopt = "^0.3"
